# gcan

./: Cargo.toml  LICENSE  README.md  flake.nix  gcroot-sizes.sh  overlay.nix  package.nix
src/: cache.rs  format.rs  main.rs  nix.rs  output.rs  size.rs  summary.rs  tui.rs  walk.rs
