[package]
name = "gcan"
version = "1.1.0"
edition = "2021"
description = "Analyze, filter, and prune Nix GC roots (transitive closure size, age, location)"
license = "MIT"

[[bin]]
name = "gcan"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
ratatui = "0.29"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
